--- a/src/App.css
+++ b/src/App.css
@@ -209,3 +209,24 @@ main{
   }
 }
 
+/*Dashboard CSS*/
+.Dashboard{
+  /* padding-top: 1rem; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+@media screen and (max-width: 1200px) {
+  .Dashboard{
+      justify-content:flex-start;
+      margin-top: 2rem;
+  }
+}
+
+@media screen and (max-width: 768px)
+{
+  .Das{
+      align-items: center;
+  }
+}
