--- a/src/App.css
+++ b/src/App.css
@@ -226,7 +226,32 @@ main{
 
 @media screen and (max-width: 768px)
 {
-  .Das{
+  .Dashboard{
       align-items: center;
+  }
+}
+
+/*Cards CSS*/
+.Cards {
+  display: flex;
+  gap: 10px;
+}
+.parentContainer{
+  width: 100%;
+}
+
+@media screen and (max-width: 1200px) {
+  .Cards{
+    flex-direction: column;
+  }
+  .parentContainer{
+    height: 9rem;
+  }
+}
+
+@media screen and (max-width: 768px)
+{
+  .Cards{
+    width: 90%;
   }
 }
